syntax = "proto3";

import "google/protobuf/wrappers.proto";

package v1;
option go_package = "./v1";

service OrderManagement {
    rpc getOrder(google.protobuf.StringValue) returns (Order);
    rpc addOrder(Order) returns (google.protobuf.StringValue);
    rpc searchWithWaffleName(google.protobuf.StringValue) returns (stream Order);
}

message Order {
    string id = 1;
    repeated Waffle waffles = 2;
    string description = 3;
    float price = 4;
}

message Waffle {
    string name = 1;
    string type = 2;
}